# resolume-screencap

./: CMakeLists.txt  README.md  ScreenCapture.cpp  ScreenCapture.def  ScreenCapture.h
.github/workflows/: build.yml
